2002-07-13  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem-tremolo.cc (brew_molecule): add code for stem tremolos.

	* lily/auto-beam-engraver.cc (create_beam_p): remember Beam
	settings at the start of a potential auto beam.

	* lily/include/sequential-iterator.hh (class Sequential_iterator):
	bugfix: protect music list from GC.

	* Documentation/user/introduction.itely: misc fixes.

	* scripts/ly2dvi.py (run_latex): show latex error log. Ask for
	bugreport if lilypond is killed by a signal. 

	* input/regression/beam-funky.ly:  new file

	* lily/input-smob.cc (make_input): GUILE 1.7 compatibility fixes.

	* lily/beam.cc: complete rewrite of multiplicity. This fixes 16th
	knees code.
	(quanting): add french beaming support (property french-beaming)
	(stem_beams): removed.

2002-07-12  Mats Bengtsson  <matsb@s3.kth.se>

	* lily/beam.cc (after_line_breaking): Set correct stem lengths
	also when beam positions are set manually.
	(consider_auto_knees): Do not use automatic knees if the directions
	are set manually by the user.

2002-07-12  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/grace-auto-beam.ly: new file

	* input/regression/grace-unfold-repeat.ly: new file

	* lily/auto-beam-engraver.cc (test_moment): never start on grace moments.

	* lily/forbid-break-engraver.cc (start_translation_timestep): skip
	grace notes for break-forbidding. Breaks during grace notes are
	handled by Bar_engraver.	

	* lily/unfolded-repeat-iterator.cc: Reimplement
	Unfolded_repeat_iterator, Volta_repeat_iterator using
	Sequential_iterator. All grace functionality from {} carries over
	to repeats as well.

	* lily/sequential-iterator.cc: new file: form baseclass for
	sequential music iterator and unfolded/volta repeat iterator.

2002-07-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/debug.hh: deprecate.

	* lily/spacing-spanner.cc (set_springs): add support for
	common-shortest-duration field.

	* lily/parser.yy (translator_spec_body): allow \set in \translator